src/network/ssl/qsslsocket_openssl_symbols.cpp
@@ -67,7 +67,7 @@
 #if defined(Q_OS_UNIX)
 #include <QtCore/qdir.h>
 #endif
-#if defined(Q_OS_LINUX) && !defined(Q_OS_ANDROID_NO_SDK)
+#if defined(Q_OS_LINUX) && !defined(Q_OS_ANDROID)
 #include <link.h>
 #endif
 
@@ -387,7 +387,7 @@ static bool libGreaterThan(const QString &lhs, const QString &rhs)
     return true;
 }
 
-#if defined(Q_OS_LINUX) && !defined(Q_OS_ANDROID_NO_SDK)
+#if defined(Q_OS_LINUX) && !defined(Q_OS_ANDROID)
 static int dlIterateCallback(struct dl_phdr_info *info, size_t size, void *data)
 {
     if (size < sizeof (info->dlpi_addr) + sizeof (info->dlpi_name))
@@ -418,7 +418,7 @@ static QStringList libraryPathList()
     paths << QLatin1String("/lib64") << QLatin1String("/usr/lib64") << QLatin1String("/usr/local/lib64");
     paths << QLatin1String("/lib32") << QLatin1String("/usr/lib32") << QLatin1String("/usr/local/lib32");
 
-#if defined(Q_OS_ANDROID_NO_SDK)
+#if defined(Q_OS_ANDROID)
     paths << QLatin1String("/system/lib");
 #elif defined(Q_OS_LINUX)
     // discover paths of already loaded libraries
